--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_URL=mongodb://localhost:27017/mydb
-JWT_SECRET=mySuperSecretKey
+DB_CONNECTION_STRING="postgresql://your_db_username:your_db_password@localhost:5432/your_db_name"
+
