--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PORT=5000
 DB_CONNECTION_STRING="postgresql://your_db_username:your_db_password@localhost:5432/your_db_name"
 
+process.env.NODE_ENV="development"
+
