--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
-PORT=5000
-DB_CONNECTION_STRING=postgresql://postgres:123456@localhost:5432/BeeSpotDB
+DB_CONNECTION_STRING="postgresql://your_db_username:your_db_password@localhost:5432/your_db_name"
 
 process.env.NODE_ENV="development"
 
+GUIDINI_APP_KEY="APP-Y1LSCSNVVTALYVOVNY"
+
+GUIDINI_SECRET_KEY="SEC-jOqHq7RtYcuFKxtj23XmPgEcIQsx3pZ1"
+
+DATABASE_URL="postgresql://neondb_owner:npg_UjdxhC0v1lKL@ep-dark-shape-ad0s6mty-pooler.c-2.us-east-1.aws.neon.tech/parking?sslmode=require"
