--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB_CONNECTION_STRING="postgresql://your_db_username:your_db_password@localhost:5432/your_db_name"
+DB_CONNECTION_STRING="postgresql://neondb_owner:npg_UjdxhC0v1lKL@ep-dark-shape-ad0s6mty-pooler.c-2.us-east-1.aws.neon.tech/parking?sslmode=require"
 
 process.env.NODE_ENV="development"
 
@@ -6,4 +6,4 @@ GUIDINI_APP_KEY="APP-Y1LSCSNVVTALYVOVNY"
 
 GUIDINI_SECRET_KEY="SEC-jOqHq7RtYcuFKxtj23XmPgEcIQsx3pZ1"
 
-DATABASE_URL="postgresql://neondb_owner:npg_UjdxhC0v1lKL@ep-dark-shape-ad0s6mty-pooler.c-2.us-east-1.aws.neon.tech/parking?sslmode=require"
+# DATABASE_URL="postgresql://neondb_owner:npg_UjdxhC0v1lKL@ep-dark-shape-ad0s6mty-pooler.c-2.us-east-1.aws.neon.tech/parking?sslmode=require"
